@@ -1,4 +1,4 @@
 DIST ruby-filemagic-0.1.1.tar.gz 3864 RMD160 95862a8a65faa6ab4d14fe1b5ed90c4b7fab98b7 SHA1 fd684bd8705048df74111cb9b9322adcd82c2ff5 SHA256 5833b6655d4ed144fa2014b41fa4f59fea34f490a5ffa35eabcaa19a0ca935bf
-EBUILD ruby-filemagic-0.1.1.ebuild 679 RMD160 dbf04c967944b20edffda67eb06f6133c0612476 SHA1 82e42fd8aed75bcc98421b64853a45fbca868840 SHA256 a4d5a889a853c053fa69b0dd1f6b63faa2ec72b55586dc16c2ec8d72c20f5228
-MISC ChangeLog 972 RMD160 23408585aef733eea6bb4f3378bf68b0022149c0 SHA1 82eb742fc501a3d5fa8d2a61bd108203ca71f627 SHA256 eeed8e27fc8e71670e400450fbbab1271295e6474342feaeb4044808300b75b7
+EBUILD ruby-filemagic-0.1.1.ebuild 663 RMD160 0a4882f11a92337743387a54763bf94da2a2609b SHA1 656a859045836384962be4cbb732e26759b5d3f4 SHA256 0501bf331adf77d576695254eb8d538a311801aeef52959cc81bb6d1712b0f3c
+MISC ChangeLog 1097 RMD160 0e390284cb45951cb1ef069b8a78d86b862a124a SHA1 4b75e85d7a08bfa2a6e50bd87d34e576744d8e20 SHA256 add975042d791c485de6955f23a4f91195266e22aaeb08660acd864b1f5ad1f7
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
