@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-filemagic/ruby-filemagic-0.1.1.ebuild,v 1.6 2009/07/14 17:41:06 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-filemagic/ruby-filemagic-0.1.1.ebuild,v 1.7 2009/12/20 14:09:08 graaff Exp $
 
 inherit ruby
 
@@ -15,9 +15,8 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE=""
 
-DEPEND="virtual/ruby
-		sys-apps/file"
-#RDEPEND="${DEPEND}"
+DEPEND="sys-apps/file"
+RDEPEND="${DEPEND}"
 
 src_compile() {
 	ruby extconf.rb || die
